<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="fr">
    <string name="app_name" translatable="false">Agenda Lyon1</string>
    <string name="ok" translatable="false">OK</string>
    <string name="exemple_url" translatable="false"><![CDATA[http://adelb.univ-lyon1.fr/jsp/custom/modules/plannings/anonymous_cal.jsp?resources=xxxxx&projectId=1&amp;calType=ical&firstDate=year-month-day&lastDate=year-month-day]]></string>
    <string name="exemple_hour" translatable="false">10:00</string>
    <string name="exemple_date" translatable="false">10/05/2022</string>
    <string name="both_time" translatable="false">%1$s - %2$s</string>
    <string name="version_build" translatable="false">Version : %1$s</string>
    <string name="exemple_text" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="url" translatable="false">URL</string>
    <string name="Contact" translatable="false">Contact</string>
    <string name="lien_edt" translatable="false">edt.univ-lyon1.fr/</string>
    <string name="myEmail" translatable="false">univlyon1.tools@gmail.com</string>
    <string name="repoGithub" translatable="false">https://github.com/wwwazz333/IUTCalendar</string>
    <string name="LogoGithub" translatable="false">Logo Github</string>
    <string name="LogoMail" translatable="false">Logo Mail</string>
    <string name="snooze" translatable="false">SNOOZE</string>
    <string name="reset" translatable="false">Reset</string>
    <string name="title_activity_settings">Paramètre</string>
    <string name="open">Ouvrir</string>
    <string name="cancel">Annulé</string>
    <string name="submit">Validé</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="tomorrow">Demain</string>
    <string name="today">Aujourd\'hui</string>
    <string name="app_widget_description">Widget pour consulter les 2 prochains évenements (maj. au clique)</string>
    <string name="task_add_btn_label">bouton d\'ajout de tache</string>
    <string name="date_exemple">Dim 24 avril 2022</string>
    <string name="last_update">dernière maj. : %1$s</string>
    <string name="event">Évènement</string>
    <string name="task">Tâche</string>
    <string name="titreLabel">Titre</string>
    <string name="resumeLabel">Résumé</string>
    <string name="descriptionLabel">Déscription</string>
    <string name="locationLabel">Salle</string>
    <string name="horaireLabel">Horaires</string>
    <string name="Settings">Paramètre</string>
    <string name="Lundi_abv">Lun</string>
    <string name="Mardi_abv">Mar</string>
    <string name="Mercredi_abv">Mer</string>
    <string name="Jeudi_abv">Jed</string>
    <string name="Vendredi_abv">Ven</string>
    <string name="Samedi_abv">Sam</string>
    <string name="Dimanche_abv">Dim</string>
    <string name="Duration">Durée</string>
    <string name="General">Général</string>
    <string name="Reload">Recharger</string>
    <string name="load_icon">icone de chargement</string>
    <string name="qr_code_scan">Scan QR code</string>
    <string name="logo_settings">Logo paramètre</string>
    <string name="close_settings">fermer les paramètres</string>
    <string name="show_update">Afficher maj.</string>
    <string name="show_date_description">Afficher la date de la dernière maj. du calendrier</string>
    <string name="revert_swipe">Inverser défilement</string>
    <string name="revert_swipe_description">Inverser le défilement des jours et des semaines (swipe)</string>
    <string name="summer_offset">Heure d\'été</string>
    <string name="summer_offset_description">Applique le décalage pour l\'heure d\'été</string>
    <string name="choose_langue">Langue</string>
    <string name="choose_langue_description">Changer la langue</string>
    <string name="Feature">Fonctionnalité</string>
    <string name="Usage">Utilisations</string>
    <string name="Usage_description">Aide pour utiliser toutes les fonctionnalités de cette application</string>
    <string name="no_last_update">pas de maj....</string>
    <string name="Added">Ajouté</string>
    <string name="Deleted">Supprimé</string>
    <string name="Moved">Déplacé</string>
    <string name="No_events">Aucun événement</string>
    <string name="Theme">Thème</string>
    <string name="themeLabelSettings">Changer de thème</string>
    <string name="No_alarm">Aucune alarme</string>
    <string name="WidgetTheme">Thème Widget</string>
    <string name="themeWidgetLabelSettings">Changer le thème du widget (s\'applique après actualisation)</string>
    <string name="Information">Information</string>
    <string name="InformationSettingsLabel">Information à propos de l\'application</string>
    <string name="urlSettingsLabel">URL pour mettre à jour le calendrier</string>
    <string name="Alarm_auto">Alarmes auto</string>
    <string name="alarm_auto_label">Une alarme automatique vas s\'activé en fonction des préférences</string>
    <string name="List_alarms">Liste des Alarmes</string>
    <string name="settings_alarm_label">Liste des alarmes automatique</string>
    <string name="Between">Entre</string>
    <string name="And">Et</string>
    <string name="RingHour">Heure Sonnerie</string>
    <string name="aide_conditon_alarm">
"Une alarme sera placée pour chaque CONDITION respecter.

Une CONDITION possède un intérvale dont les valeurs (inférieur ET supérieur) sont comprises.

Ainsi qu'un horaire qui correspond à l'heure à laquelle l'alarme va sonner."
    </string>
    <string name="must_contain">Doit contenir</string>
    <string name="must_not_contain">Ne doit pas contenir</string>
    <string name="Ajout_contrainte">Ajouté Contrainte</string>
    <string name="Horaire_alarms_auto">Horaire Alarmes auto</string>
    <string name="label_horaire_alarm_auto">Paramétrage des conditions pour les horaires des alarmes</string>
    <string name="Help">Aide</string>
    <string name="TimeToRing">Horaire à laquelle faire sonner</string>
    <string name="BorneSup">Intervale supérieur (compris)</string>
    <string name="BorneInf">Intervale inferieur (compris)</string>
    <string name="Interval">Intervale</string>
    <string name="born_sup_et_inf_inverser">La borne supérieure ne peut pas être plus petite que la borne infèrieur.</string>
    <string name="must_not_be_exactly">N\'est pas</string>
    <string name="alarme">Alarme</string>
    <string name="stop_alarme">stop alarme</string>
    <string name="poubelle">Poubelle</string>
    <string name="deplacer">Déplacé</string>
    <string name="exemple_event_name">Maths</string>
    <string name="le">le</string>
    <string name="From">Du</string>
    <string name="To">Au</string>
    <string name="Calendar">Calendrier</string>
    <string name="History">Historique</string>
    <string name="PublicHolidays">Jours fériés</string>
    <string name="publicHolidaysDescriptionOff">Les alarmes sont désactivés pour les jours fériés (cours de 8 h)</string>
    <string name="publicHolidaysDescriptionOn">Les alarmes sont activés pour les jours fériés</string>
    <string name="AlarmesComplex">Alarmes avancées</string>
    <string name="alarmesComplexOff">"L'alarme est placé un temps prédéterminé avant le 1er cours de la journée.\n"</string>
    <string name="alarmesComplexOn">Les alarmes sont placés en fonction des intervalles de temps prédéfinie (Horaires Alarmes auto) et avec des contraintes (Contraintes Alarmes)</string>
    <string name="HoraireSonnerie">Horaire Sonnerie</string>
    <string name="HoraireSonnerieDescription">Horaire de la sonnerie relative au 1er cours de la journée (en minutes avant le cours)</string>
    <string name="ActivatedDays">Jours activé</string>
    <string name="activatedDaysDescription">Les jours de la semaine où les alarmes automatiques seront activé</string>
    <string name="ConstraintAlarms">Contraintes Alarmes</string>
    <string name="ConstraintAlarmsDescription">Paramétrage des contraintes pour les alarmes</string>
    <string name="aid_constraint_alarm">
"Les CONTRAINTES sont des conditions sur le titre de l\'événement qui doit soit

- 'Ne doit pas contenir' une chaîne de caractères
- 'N\'est pas' une chaîne de caractères"
    </string>
    <string name="presentationGeneral">"Cette application vous permet de consulter votre agenda universitaire sur votre téléphone, vous pourrez ainsi être notifié d\'un changement dans votre emploi du temps, vous pourrez retrouver tous les changements dans l\'historique."</string>
    <string name="ForStarted">Pour Commencer</string>
    <string name="commencer1">"Il vous faut lier cette application à votre emploi du temps, pour se faire rendez-vous sur :"</string>
    <string name="commencer2">Vous devrez vous connecter puis exporter l\'emplois du temps désirer.</string>
    <string name="commencer3">Ensuite vous pouvez taper l\'url proposer dans la section URL des paramètres ou tous simplement utiliser le QR code.</string>
    <string name="alarm_auto_aide1">Vous pouvez activer les alarmes automatiques, c\'est un réveil qui s\'adapte en fonction de votre 1re heure de cours (elles sont générées à l\'avance pour les 7 prochains jours).</string>
    <string name="alarm_auto_aide2">Il y a 2 moyens de les paramétrer.</string>
    <string name="ManiereSimplifie">Manière simplifié</string>
    <string name="maniereSimplifierAide1">>Aide pour utiliser</string>
    <string name="maniereSimplifierAide2">Vous pourrez aussi déterminer les jours où les alarmes pourront s\'activer ou non, avec le paramètre  \'Jours activé\'</string>
    <string name="ManiereAvancer">Manière avancé</string>
    <string name="alarmesAutoAide1">Cette section permet d\'ajouté des alarmes qui devront respecter des conditions, qui sont :</string>
    <string name="alarmesAutoAide2">le début du 1er cours de la journée doit être dans l\'interval et doit être un des jours sélectionné pour ces alarmes, alors l\'alarmes sonnera à l\'heure indiqué.</string>
    <string name="alarmesAutoAide3">Avec la Manière avancée il est ainsi possible de mettre plusieurs alarmes à des horaires différentes</string>
    <string name="ConstraintAlarmsAide1">Les contrainte sont valables pour toutes les alarmes configurer dans la section précédente. Ce sont des contraintes sur le nom de la matière. Les 2 contraintes possibles sont :</string>
    <string name="ConstraintAlarmsAide2">Ne doit pas contenir une chaîne de caractère</string>
    <string name="ConstraintAlarmsAide3">Et l\'autre est N\'est pas, soit qui ne doit pas être exactement la chaine de caractère (attention aux majuscules dans les 2 cas).</string>
    <string name="widget">Widget</string>
    <string name="widgetAide1">Vous pouvez changer son thème (blanc, noire, gris) dans les paramètre.</string>
    <string name="widgetAide2">Il affiche les 2 prochains cours (s\'ils sont dans la même journée). Un cours affiché un certain temps après son commencement puis le widget affichera les suivants.</string>
    <string name="widgetAide3">Il s\'actualise seul fréquemment, mais vous pouvez clicker dessus pour l\'actualiser manuellement.</string>
    <string name="Stop_alarm">Stop l\'alarme</string>
    <string name="DelCondition">Supprime la condition</string>
    <string name="MenuNav">Menu de navigation</string>
    <string name="bouton_d_aide">Bouton d\'aide</string>
    <string name="go_to_page_Calendar">Allez à la page Calendrier</string>
    <string name="go_to_page_History">Allez à la page Historique</string>
    <string name="go_to_page_Settings">Allez à la page Paramètre</string>
    <string name="Search_room_title">Rechercher une salle (Beta)</string>
    <string name="go_to_page_Search">Allez à la page Recherche de salle</string>
    <string name="choose_ringtone">Choisissez votre sonnerie</string>
    <string name="Ringtone">Sonnerie</string>
    <string name="Settings_alarms">Paramètre alarmes</string>
</resources>