<PreferenceScreen
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            app:title="@string/url"
            android:icon="@drawable/ic_link_url">

        <Preference
                app:fragment="com.iutcalendar.settings.URLSetterFragment"
                app:title="@string/url"
                app:summary="@string/urlSettingsLabel"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/General"
                        android:icon="@drawable/ic_settings_ico">
        <SwitchPreference
                app:key="show_update"
                app:title="@string/show_update"
                app:summary="@string/show_date_description"
                android:defaultValue="true"
        />

        <ListPreference
                android:key="language_selected"
                android:title="@string/choose_langue"
                android:summary="@string/choose_langue_description"
                android:defaultValue="fr"
                android:entryValues="@array/language_values"
                android:entries="@array/language_options"/>


        <ListPreference
                android:key="theme_selected"
                android:title="@string/Theme"
                android:summary="@string/themeLabelSettings"
                android:entryValues="@array/theme_values"
                android:entries="@array/theme_options"
                android:defaultValue="default"/>
        <ListPreference
                android:key="theme_widget_selected"
                android:title="@string/WidgetTheme"
                android:summary="@string/themeWidgetLabelSettings"
                android:entryValues="@array/theme_widget_values"
                android:entries="@array/theme_widget_options"
                android:defaultValue="grey"/>

    </PreferenceCategory>
    <PreferenceCategory app:title="Alarme auto"
                        android:icon="@drawable/ic_alarm">
        <SwitchPreference
                android:key="alarme_enable"
                android:title="@string/Alarm_auto"
                android:summaryOn="@string/alarm_auto_label"
                android:summaryOff="Aucune alarmes ne sonne (même celle dans 'Liste des Alamres')"
                android:defaultValue="false"/>
        <SwitchPreference
                android:key="jour_ferier_enabled"
                android:title="Jours fériés"
                android:summaryOff="les alarms sont désactivé pour les jours fériés (cours de 8h)"
                android:summaryOn="les alarms sont activé pour les jours fériés"
                android:defaultValue="false"/>

        <Preference
                android:key="liste_alarmes"
                app:fragment="com.iutcalendar.settings.AlarmListFragment"
                app:title="@string/Settings_alarms"
                app:summary="@string/settings_alarm_label"/>
        <SwitchPreference
                android:key="complex_alarm_settings"
                android:title="Alarmes avancées"
                android:summaryOff="L'alarme est placès un temps pré-déterminé avant le 1er cour de la journée."
                android:summaryOn="Les alarmes sont placès selon des intervale de temps prédéfinie (Horaire Alarm auto) et avec des contraintes (Contraintes alarmes)"
                android:defaultValue="false"/>

        <SeekBarPreference
                android:key="time_before_ring"
                android:title="Horaire Sonnerie"
                android:summary="Horaire de la sonnerie relative au 1er cour de la journé"
                app:showSeekBarValue="true"
                android:defaultValue="60"
                app:min="5"
                android:max="300"/>

        <MultiSelectListPreference
                android:key="activated_days"
                android:title="Les jours d'activation"
                android:dialogTitle="Jours d'activation"
                android:summary="Les jours où les alarmes automatique seront activé"
                android:entryValues="@array/values_days"
                android:entries="@array/names_days"
                android:defaultValue="@array/default_days"/>


        <Preference
                android:key="horaire_alarmes"
                app:fragment="com.iutcalendar.settings.AlarmConditionFragment"
                app:title="@string/Horaire_alarms_auto"
                app:summary="@string/label_horaire_alarm_auto"/>
        <Preference
                android:key="contrainte_alarmes"
                app:fragment="com.iutcalendar.settings.AlarmConstraintFragment"
                app:title="Contraintes Alarmes"
                app:summary="Paramètrage des contraintes pour les alarmes"/>


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/Feature"
                        android:icon="@drawable/ic_feature_settings">
        <Preference
                app:fragment="com.iutcalendar.settings.ExplicationSettingsFragment"
                app:title="@string/Usage"
                app:summary="@string/Usage_description"/>
    </PreferenceCategory>


</PreferenceScreen>