<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_margin="@dimen/default_padding"
              android:padding="@dimen/default_padding"
              android:background="@drawable/surface_background">

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <LinearLayout android:layout_width="0dp"
                      android:layout_weight="1"
                      android:layout_gravity="center"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:orientation="horizontal">

                <TextView
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:text="@string/Between"/>
                <TextView
                        android:id="@+id/beginHour"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/exemple_hour"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:text="@string/And"/>
                <TextView
                        android:id="@+id/endHour"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"

                        android:text="@string/exemple_hour"/>
            </LinearLayout>

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:orientation="horizontal">

                <TextView
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:text="@string/RingHour"/>
                <TextView
                        android:id="@+id/ringHour"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"

                        android:text="@string/exemple_hour"/>
            </LinearLayout>
        </LinearLayout>

        <ImageButton
                android:id="@+id/del_btn"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:minWidth="48dp"
                android:src="@drawable/ic_basket"
        android:contentDescription="@string/DelCondition"/>


    </LinearLayout>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_marginHorizontal="@dimen/default_padding">

        <CheckedTextView
                android:id="@+id/monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/Lundi_abv"
                android:drawableBottom="@drawable/checkmark"/>
        <View android:layout_weight="1" android:layout_width="0dp" android:layout_height="0dp"/>
        <CheckedTextView
                android:id="@+id/tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/Mardi_abv"
                android:drawableBottom="@drawable/checkmark"/>
        <View android:layout_weight="1" android:layout_width="0dp" android:layout_height="0dp"/>
        <CheckedTextView
                android:id="@+id/wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/Mercredi_abv"
                android:drawableBottom="@drawable/checkmark"/>
        <View android:layout_weight="1" android:layout_width="0dp" android:layout_height="0dp"/>
        <CheckedTextView
                android:id="@+id/thursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/Jeudi_abv"
                android:drawableBottom="@drawable/checkmark"/>
        <View android:layout_weight="1" android:layout_width="0dp" android:layout_height="0dp"/>
        <CheckedTextView
                android:id="@+id/friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/Vendredi_abv"
                android:drawableBottom="@drawable/checkmark"/>
        <View android:layout_weight="1" android:layout_width="0dp" android:layout_height="0dp"/>
        <CheckedTextView
                android:id="@+id/saturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/Samedi_abv"
                android:drawableBottom="@drawable/checkmark"/>
        <View android:layout_weight="1" android:layout_width="0dp" android:layout_height="0dp"/>
        <CheckedTextView
                android:id="@+id/sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/Dimanche_abv"
                android:drawableBottom="@drawable/checkmark"/>


    </LinearLayout>

</LinearLayout>