<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/globalLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/default_padding"
        android:padding="@dimen/default_padding"
        android:background="@drawable/surface_background">


    <TextView
            android:id="@+id/nameEvent"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/exemple_event_name"
            android:layout_gravity="center"
            style="@style/TitleText"/>
    <LinearLayout
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
                android:id="@+id/actionLabel"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/deplacer"
                style="@style/subTitle"/>
        <TextView
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/le"
                android:paddingHorizontal="@dimen/default_padding"/>
        <TextView
                android:id="@+id/actionDate"
                android:layout_width="0dp" android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/exemple_date"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/fromLayout"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
                android:id="@+id/fromLabel"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/From"/>
        <View android:layout_width="@dimen/tab_gap" android:layout_height="match_parent"/>
        <TextView
                android:id="@+id/fromDate"
                android:layout_width="0dp" android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/exemple_date"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/toLayout"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
                android:id="@+id/toLabel"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/To"/>
        <View android:layout_width="@dimen/tab_gap" android:layout_height="match_parent"/>
        <TextView
                android:id="@+id/toDate"
                android:layout_width="0dp" android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/exemple_date"/>

    </LinearLayout>

</LinearLayout>