<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/default_padding">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_toStartOf="@+id/is_activate"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/tab_gap">

        <TextView
            android:id="@+id/horaire"
            style="@style/subTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/tab_gap"
            android:text="@string/exemple_hour"

            android:textSize="48sp" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exemple_date"
            android:textSize="32sp" />

    </LinearLayout>

    <Switch
        android:id="@+id/is_activate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:minWidth="48dp"
        android:minHeight="48dp" />

    <ImageButton
        android:id="@+id/remove_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/linearLayout"
        android:layout_alignParentEnd="true"
        android:background="#00000000"
        android:contentDescription="@string/poubelle"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_basket"
        android:visibility="invisible" />


</RelativeLayout>